src/objects/Tax_Classification__c.object
<CustomObject>
    <description>Tax Classification</description>
    <fields>
        <fullName>CMD_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMD Request</label>
        <referenceTo>CMD_Request__c</referenceTo>
        <relationshipLabel>Tax Classification</relationshipLabel>
        <relationshipName>Tax_Classification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT - Austria</fullName>
                </value>
                <value>
                    <fullName>AU - Australia</fullName>
                </value>
                <value>
                    <fullName>BE - Belgium</fullName>
                </value>
                <value>
                    <fullName>BR - Brazil</fullName>
                </value>
                <value>
                    <fullName>CA - Canada</fullName>
                </value>
                <value>
                    <fullName>CN - China</fullName>
                </value>
                <value>
                    <fullName>CZ - Czech Republic</fullName>
                </value>
                <value>
                    <fullName>DE - Germany</fullName>
                </value>
                <value>
                    <fullName>EE - Estonia</fullName>
                </value>
                <value>
                    <fullName>ES - Spain</fullName>
                </value>
                <value>
                    <fullName>FI - Finland</fullName>
                </value>
                <value>
                    <fullName>FR - France</fullName>
                </value>
                <value>
                    <fullName>GB - United Kingdom</fullName>
                </value>
                <value>
                    <fullName>HK - Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HU - Hungary</fullName>
                </value>
                <value>
                    <fullName>ID - Indonesia</fullName>
                </value>
                <value>
                    <fullName>IE - Ireland</fullName>
                </value>
                <value>
                    <fullName>IN - India</fullName>
                </value>
                <value>
                    <fullName>IT - Italy</fullName>
                </value>
                <value>
                    <fullName>JP - Japan</fullName>
                </value>
                <value>
                    <fullName>KR - South Korea</fullName>
                </value>
                <value>
                    <fullName>MX - Mexico</fullName>
                </value>
                <value>
                    <fullName>MY - Malaysia</fullName>
                </value>
                <value>
                    <fullName>NL - Netherlands</fullName>
                </value>
                <value>
                    <fullName>PH - Philippines</fullName>
                </value>
                <value>
                    <fullName>PL - Polska</fullName>
                </value>
                <value>
                    <fullName>PT - Portugal</fullName>
                </value>
                <value>
                    <fullName>RO - Rumania</fullName>
                </value>
                <value>
                    <fullName>SG - Singapore</fullName>
                </value>
                <value>
                    <fullName>SK - Slovakia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_CMD_Tax_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP CMD Tax Classification</description>
        <inlineHelpText>SAP CMD Tax Classification</inlineHelpText>
        <label>SAP CMD Tax Classification</label>
        <referenceTo>SAP_CMD__c</referenceTo>
        <relationshipLabel>Tax Classification</relationshipLabel>
        <relationshipName>SAP_CMD_Tax_Classification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Category__c</fullName>
        <description>Tax_Category</description>
        <inlineHelpText>Tax_Category</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MWST</fullName>
                </value>
                <value>
                    <fullName>UTXJ</fullName>
                </value>
                <value>
                    <fullName>ZWRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Classification__c</fullName>
        <description>Tax Classification</description>
        <inlineHelpText>Tax Classification</inlineHelpText>
        <label>Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tax_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Tax_Category__c</columns>
        <columns>Tax_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Tax Classification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Classification</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>